--- a/hosted/style.css
+++ b/hosted/style.css
@@ -71,6 +71,50 @@ nav:nth-child(1) {
     float:left;
 }
 
+.deleteForm {
+    border: 2px solid #338acc;
+    height: 35px;
+    width: 865px;
+    margin-top:0px;
+    padding-top:10px;
+    background-color: #55acee;
+    border-bottom-right-radius: 4px;
+    border-top-right-radius: 4px;
+}
+
+.deleteForm label {
+    display: inline-block;
+    width: 75px;
+    margin-left: 10px;
+    font-size: 1.2em;
+    float: left;
+    color: white;
+}
+
+.deleteForm input[type=text] {
+    float:left;
+}
+
+.deleteSubmit {
+    transition: background-color 0.4s ease;
+    display: inline;
+    width: 90px;
+    background-color: #55acee;
+    border-radius: 2px;
+    color: white;
+    text-decoration: none;
+    margin-left: 5px;
+}
+
+.deleteSubmit:link, .deleteSubmit:visited, .deleteSubmit:hover, .deleteSubmit:active {
+    color: white;
+}
+
+.deleteSubmit:hover {
+    transition: background-color 0.4s ease;
+    background-color: #338acc;
+}
+
 .makeDomoSubmit {
     transition: background-color 0.4s ease;
     display: inline;
